feat: adicionar opção para desabilitar WhatsApp temporariamente

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - NODE_ENV=production
       - PORT=3001
       - BASE_URL=https://batnav.alquimiazen.com.br
+      - DISABLE_WHATSAPP=true  # Desabilitar WhatsApp temporariamente
 
     volumes:
       # Persistência do banco de dados
